<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
   <PreferenceCategory
   android:summary="@string/reglages_morse_description"
   android:title="@string/reglages_morse" >
   <ListPreference
     android:id="@+id/dureePointListPreference"
     android:entries="@array/pointTimeArray_options"
     android:entryValues="@array/pointTimeArray_values"
     android:key="dureePointListKey"
     android:summary=""
     android:title="@string/duree_point"
     android:defaultValue="400" />
 </PreferenceCategory>
 <PreferenceCategory
   android:summary="@string/interactions_description"
   android:title="@string/interactions" >
	<CheckBoxPreference
	    android:id="@+id/sonCheckbox"
        android:text="@string/son"
     	android:key="sonCheckBox"
     	android:summary=""
     	android:title="@string/son" 
     	android:defaultValue="true" />
     
     <CheckBoxPreference
        android:id="@+id/vibreurCheckbox"
        android:text="@string/vibreur"
     	android:key="vibreurCheckBox"
     	android:summary=""
     	android:title="@string/vibreur"
     	android:defaultValue="true" />
     
     <CheckBoxPreference
        android:id="@+id/flashCheckbox"
        android:text="@string/flash"
     	android:key="flashCheckBox"
     	android:summary=""
     	android:title="@string/flash" 
     	android:defaultValue="true" />
 </PreferenceCategory>
</PreferenceScreen>
