<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutUsActivity" >

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/MYMorse"
        android:onClick="swapTitle"
        android:textSize="35sp"
        android:paddingTop="30dp"
        android:clickable="true" />

    <TextView
        android:id="@+id/subTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/title"
        android:text="@string/MaximeYoannMorse"
        android:gravity="center"
        android:textSize="20sp"/>
    
    <TextView
        android:id="@+id/maxime_feron"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/subTitle"
        android:text="@string/maxime_feron"
        android:paddingTop="30dp"
        android:gravity="center"
        android:textSize="17sp"/>
    
    <TextView
        android:id="@+id/mail_maxime_feron"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/maxime_feron"
        android:text="@string/mail_maxime_feron"
        android:gravity="center"
        android:textSize="17sp"/>
    
    <TextView
        android:id="@+id/yoann_le_petit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/mail_maxime_feron"
        android:text="@string/yoann_le_petit"
        android:paddingTop="30dp"
        android:gravity="center"
        android:textSize="17sp"/>
    
    <TextView
        android:id="@+id/mail_yoann_le_petit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/yoann_le_petit"
        android:text="@string/mail_yoann_le_petit"
        android:gravity="center"
        android:textSize="17sp"/>
    
    <TextView
        android:id="@+id/s9info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/mail_yoann_le_petit"
        android:text="@string/s9info"
        android:paddingTop="30dp"
        android:gravity="center"
        android:textSize="17sp"/>
    
   	<ImageView
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_below="@+id/s9info"
      android:gravity="center"
      android:paddingTop="30dp"
      android:contentDescription="@string/enib"
      android:src="@drawable/enib"/>
    
</RelativeLayout>