<?xml version="1.0" encoding="utf-8"?>
        
	<ScrollView 
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:fillViewport="true" 
		tools:context=".MainActivity">
        
	    <LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical">

		    <TextView
		        android:id="@+id/title"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:gravity="center"
		        android:text="@string/MYMorse"
		        android:onClick="swapTitle"
		        android:textSize="35sp"
		        android:paddingTop="30dp"
		        android:clickable="true" />
		
		    <TextView
		        android:id="@+id/subTitle"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/MaximeYoannMorse"
		        android:gravity="center"
		        android:textSize="20sp"/>
		
		    <Button
		        android:id="@+id/converterButton"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="20dp"
		        android:layout_marginRight="20dp"
		        android:layout_marginTop="30dp"
		        android:text="@string/convertisseur"
		        android:onClick="startConverter" />
		    
		    <Button
		        android:id="@+id/dictionaryButton"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="20dp"
		        android:layout_marginRight="20dp"
		        android:layout_marginTop="10dp"
		        android:text="@string/dictionary"
		        android:onClick="startDictionary" />
		    
		    <Button
		        android:id="@+id/parametersButton"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="20dp"
		        android:layout_marginRight="20dp"
		        android:layout_marginTop="10dp"
		        android:text="@string/parametres"
		        android:onClick="startParameters" />
		    
		    <Button
		        android:id="@+id/AboutUsButton"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="20dp"
		        android:layout_marginRight="20dp"
		        android:layout_marginTop="10dp"
		        android:text="@string/aboutus"
		        android:onClick="startAboutUs" />
		    
		    <Button
		        android:id="@+id/QuitButton"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="20dp"
		        android:layout_marginRight="20dp"
		        android:layout_marginTop="10dp"
		        android:text="@string/quit"
		        android:onClick="quit" />
		</LinearLayout>
	</ScrollView>