	<ScrollView 
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:fillViewport="true" 
		tools:context=".ConverterActivity">
        
	    <LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical">
	    
		    <TextView
		        android:id="@+id/text"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:gravity="center"
		        android:text="@string/texte"
		        android:textSize="30sp"
		        android:paddingTop="30dp"/>
		
		    <EditText
		        android:id="@+id/editText"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:ems="10"
		        android:inputType="textMultiLine|textNoSuggestions"/>
		
		    <TextView
		        android:id="@+id/morse"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:gravity="center"
		        android:textSize="30sp"
		        android:paddingTop="30dp"
		        android:text="@string/morse" />
		
		    <EditText
		        android:id="@+id/editMorse"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:ems="10"
		        android:inputType="textMultiLine|textNoSuggestions" />
		
		    <!--ProgressBar
		        android:id="@+id/progressBar"
		        style="?android:attr/progressBarStyleHorizontal"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="5dp" /-->
		    
		    <Button
		        android:id="@+id/playMorse"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/playMorse"
		        android:layout_marginTop="5dp"
		        android:layout_marginLeft="20dp"
		        android:layout_marginRight="20dp"
		        android:onClick="playMorse" />

		</LinearLayout>
	</ScrollView>